fix: increase top margin to avoid content being covered

--- a/public/styles.css
+++ b/public/styles.css
@@ -542,7 +542,7 @@ nav ul li a u {
 
 .intro, .content .links {
     padding: 20px;
-    margin-top: 20px;
+    margin-top: 60px;
 }
 
 .other-projects-inner, .contact-inner, .intro-inner, .content-inner, .links-inner {
